prevent the process name from being wrapped

--- a/fontEnd/index.sass
+++ b/fontEnd/index.sass
@@ -165,6 +165,7 @@ i.label
   line-height: 20px
   display: inline-block
   vertical-align: middle
+  white-space: nowrap
 .hidden
   display: none
   
